stuff and things

--- a/barebones.html
+++ b/barebones.html
@@ -49,6 +49,7 @@
     <div class="row">
         <div class="main">
             <div>
+                <a href="http://alisyn.net/witchy.html">heyyyyy</a> 
                 <button onclick="dummyClick()" class="buttonRainbow" id="dummyClick" style='padding: 0px 10px; ;border: solid 1px black; height: 40px;vertical-align: middle;position: absolute; top:  50%; left: 50%; transform: translate(-50%,-50%);'>Click me for a dummy event!</button>
                 <script type="text/javascript">
                     function dummyClick() {
