--- a/navbar.html
+++ b/navbar.html
@@ -35,10 +35,9 @@
   <div class="dropdown">
     <button class="dropbtn">Just Random Things</button>
     <div class="dropdown-content">
-      <a href="disappearingElements">Show/Hide Elements</a>
+      <a href="disappearingElements.html">Show/Hide Elements</a>
       <a href="shadow.html">Shadow DOM</a>
       <a href="modal.html">Scrollable Modal</a>
-      <a href="disappearingElements.html">disappearingElements</a>
       <a href="cssTest.html">CSS Test</a>
     </div>
   </div>
