--- a/topFrame.html
+++ b/topFrame.html
@@ -91,7 +91,7 @@
                 }
             </script>
         </div>
-        <div>
+<!--         <div>
             <button onclick="getVisitorId()" class="btn arc" id="getVisitorId"
                 style='padding: 0px 10px; ;border: solid 1px black; height: 40px;vertical-align: middle;'>getVisitorId</button>
 
@@ -102,7 +102,7 @@
                     document.getElementById("getVisitorIdOutput").innerHTML = pendo.getVisitorId()
                 }
             </script>
-        </div>
+        </div> -->
     </div>
 
     <!--Navigation bar-->
