--- a/Darkness.html
+++ b/Darkness.html
@@ -38,7 +38,7 @@
       });
     })('87bea2e6-3d7c-47d8-76fd-2b2c05f0057a');
   </script>
-  
+
   <title>Alisyn's Playground</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -80,6 +80,11 @@
 <body>
 
   <div class="header">
+          <div>
+        <a class="dropdown-toggle" data-toggle="dropdown" id="help-center-dropdown" href="#">
+          Help
+        </a>
+      </div>
     <h1>Hello</h1>
     <p>I am obviously a completely different website</p>
   </div>
@@ -117,6 +122,7 @@
       </script>
     </div>
     <div class="main">
+
       <div>
         <button onclick="dummyClick()" class="btn arc" id="dummyClick"
           style='padding: 0px 10px; ;border: solid 1px black; height: 40px;vertical-align: middle;'>Click me
