--- a/segment.html
+++ b/segment.html
@@ -6,39 +6,31 @@
    <link rel="stylesheet" href="styles.css">
    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
    <style>
-      /* Create two equal columns that floats next to each other */
-      .column {
-         float: left;
-         width: 50%;
-         padding: 10px;
-         font-size: 14px
+      .form-container {
+         max-width: 800px;
+         /* set max width for spacing control */
+         margin: 0 auto;
+         /* optional: center the form horizontally */
       }
 
-      /* Clear floats after the columns */
-      .gridRow:after {
-         content: "";
-         display: table;
-         clear: both;
+      .form-row {
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+         margin-bottom: 10px;
+         width: 100%;
       }
 
-      form {
-         display: table;
+      .form-row label {
+         flex: 1;
+         text-align: left;
+         padding-right: 10px;
       }
 
-      p {
-         display: table-row;
-      }
-
-      label {
-         display: table-cell;
-      }
-
-      input {
-         display: table-cell;
-      }
-
-      .header p {
-         display: block;
+      .form-row input {
+         flex: 0 0 300px;
+         /* fixed or max width for input */
+         text-align: right;
       }
    </style>
    <script>
@@ -70,8 +62,10 @@
 </head>
 
 <body>
+
    <div class="header">
-      <h1>Oh hai</h1>
+      <img class="headerIcon" src="img/7513466.png" width="20"><br><br>
+      <h1>Hello</h1>
       <p>I am a website</p>
    </div>
 
@@ -93,68 +87,93 @@
          <img src="img/rainbowEmblem.png" width="300"><br>
          <img src="img/catEmblem.png" width="300"><br>
          <img src="img/heartEmblem.png" width="300"><br>
-         <br>
-         <p>
-            This is randomized text.
-            -
-            <SCRIPT LANGUAGE="JAVASCRIPT">
-               var r_text = new Array();
-               r_text[0] = "Lorem ipsum nightstalker fatebringer.";
-               r_text[1] = "Lorem ipsum witherhoard ikelos.";
-               r_text[2] = "Lorem ipsum stasis thunderlord.";
+         <p>Lorem ipsum nightstalker fatebringer.</p>
 
-               var i = Math.floor(r_text.length * Math.random());
-
-               document.write(r_text[i]);
-
-            </script>
-         </p>
-         <p>
-            The current time is:
-            <span id="datetime"></span>
-         </p>
       </div>
       <div class="main">
          <div>
-            <h2>Segment.io Visitor Testing</h2>
+            <button onclick="dummyClick()" class="buttonRainbow" id="dummyClick"
+               style='padding: 0px 10px; ;border: solid 1px black; height: 40px;vertical-align: middle;'>Click me
+               for a dummy event!</button>
 
-            <form>
-               <p>
-                  <label for="visitorField1">Enter a new visitorId: </label>
-                  <input type="text" id="visitorField1" value="segmentTestArthur"
-                     style='border:solid 1px black;height: 30px;width: 300px;vertical-align: middle;font-family: myCustomFont;'>
-               </p>
-               <p>
-                  <label for="visitorField2">What is your name: </label>
-                  <input type="text" id="visitorField2" value="King Arthur of the Britons"
-                     style='border:solid 1px black;height: 30px;width: 300px;vertical-align: middle;font-family: myCustomFont;'>
-               </p>
-               <p>
-                  <label for="toSeekTheGrail">What is your quest: </label>
-                  <input type="text" id="toSeekTheGrail" value="To seek the Grail"
-                     style='border:solid 1px black;height: 30px;width: 300px;vertical-align: middle;font-family: myCustomFont;'>
-               </p>
-               <p>
-                  <label for="africanOrEuropean">What is the airspeed velocity of an unladen swallow: </label>
-                  <input type="text" id="africanOrEuropean" value="what? i don't know that"
-                     style='border:solid 1px black;height: 30px;width: 300px;vertical-align: middle;font-family: myCustomFont;'>
-               </p>
-            </form>
-            <br>
-            <button onclick="identifyNewVisitor()" class="btn void"
-               style='padding: 0px 10px; ;border: solid 1px black; height: 40px;vertical-align: middle;'>identify!</button>
             <script type="text/javascript">
-               function identifyNewVisitor() {
-                  analytics.identify(document.getElementById("visitorField1").value, {
-                     name: document.getElementById("visitorField2").value,
-                     quest: document.getElementById("toSeekTheGrail").value,
-                     airspeedVelocity: document.getElementById("africanOrEuropean").value,
-                  });
+               function dummyClick() {
+                  console.log("yeah, it's clicked");
                }
             </script>
+         </div>
+         <br>
+         <div>
+            <button onclick="getVisitorId()" class="buttonRainbow" id="getVisitorId"
+               style='padding: 0px 10px; ;border: solid 1px black; height: 40px;vertical-align: middle;'>getVisitorId</button>
 
+            <p id="getVisitorIdOutput"></p>
+
+            <script type="text/javascript">
+               function getVisitorId() {
+                  document.getElementById("getVisitorIdOutput").innerHTML = pendo.getVisitorId()
+               }
+            </script>
+         </div>
+         <hr>
+         <div>
+            <div class="form-container">
+               <div class="form-row">
+                  <label for="setEventName">Enter the name of your track event:</label>
+                  <input type="text" id="setEventName" name="setEventName" value="segmentTestTrackEvent"
+                     class="textbox">
+               </div>
+
+               <div class="form-row">
+                  <label for="setPropName">Enter the name of your event property:</label>
+                  <input type="text" id="setPropName" name="setPropName" value="segmentTestProperty" class="textbox">
+               </div>
+
+               <div class="form-row">
+                  <label for="setValueName">Enter the value of your event property:</label>
+                  <input type="text" id="setValueName" name="setValueName" value="segmentTestPropertyValue"
+                     class="textbox">
+               </div>
+                <button onclick="sendSegmentTrack()" class="buttonRainbow" id="sendSegmentTrack"
+               style='padding: 0px 10px; ;border: solid 1px black; height: 40px;vertical-align: middle;'>sendSegmentTrack</button>
+
+            </div>
+            
+
+            <script type="text/javascript">
+               function sendSegmentTrack() {
+                  // Get the values from the input fields
+                  var eventName = document.getElementById("setEventName").value;
+                  var propName = document.getElementById("setPropName").value;
+                  var valueName = document.getElementById("setValueName").value;
+                  // Log the values to the console
+                  console.log("Event Name: " + eventName);
+                  console.log("Property Name: " + propName);
+                  console.log("Property Value: " + valueName);
+                  // Send the track event to Segment
+                  analytics.track(eventName, {
+                     [propName]: valueName,
+                     timestamp: new Date().toISOString()
+                  });
+                  // Optionally, you can log a success message
+                  console.log("Track event sent successfully!");
+                  // Clear the input fields after sending the event
+                  document.getElementById("setEventName").value = "";
+                  document.getElementById("setPropName").value = "";
+                  document.getElementById("setValueName").value = "";
+                  
+               }
+            </script>
          </div>
       </div>
+   </div>
+   <div class="footer">
+      <h2>I want to go to there</h2>
+      <a href="https://www.bungie.com">Bungo</a> |
+      <a href="https://www.d2checklist.com">D2 Checklist</a> |
+      <a href="https://www.destinyitemmanager.com">DIM</a>
+   </div>
+
 </body>
 
 </html>
