--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       // Call this whenever information about your visitors becomes available
       // Please use Strings, Numbers, or Bools for value types.
       pendo.initialize({
-       //excludeAllText: true,
+        //excludeAllText: true,
         //disableGuides: true,
         visitor: {
           id: user_id,   // Required if user is logged in
@@ -67,8 +67,9 @@
       });
     })('a93e68a6-46fd-443a-699f-aa31985c066d');
   </script>
-  
-  <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=ab57b084-95a4-4dcc-bc94-6d6bb141c9f3"></script>
+
+  <script id="ze-snippet"
+    src="https://static.zdassets.com/ekr/snippet.js?key=ab57b084-95a4-4dcc-bc94-6d6bb141c9f3"></script>
 
   <!--   <style>
     select {
@@ -165,7 +166,7 @@
         <button title="saliBabby" onclick="dummyClick()" class="buttonRainbow" id="dummyClick"
           style='padding: 0px 10px; ;border: solid 1px black; height: 40px;vertical-align: middle;'>
           <span>Click me for a dummy event!</span>
-        What's some more text?</button>
+          What's some more text?</button>
         <script type="text/javascript">
           function dummyClick() {
             console.log("yeah, it's clicked");
@@ -174,10 +175,17 @@
       </div>
       <br>
       <div>
-        <a href="sheBasic.html">
-          <button disabled class="buttonRainbow" id="backToBasics"
-            style='padding: 0px 10px; ;border: solid 1px black; height: 40px;vertical-align: middle;'>Back to.
+        <a href="warlock.html">
+          <button class="buttonRainbow" id="backToBasics"
+            style='padding: 0px 10px; ;border: solid 1px black; height: 40px;vertical-align: middle;'>Back to
             sheBasic</button>
+        </a>
+      </div>
+      <div>
+        <a href="warlock.html">
+          <button class="buttonRainbow" id="backToBasics2"
+            style='padding: 0px 10px; ;border: solid 1px black; height: 40px;vertical-align: middle;'>Back to
+            sheBasic2</button>
         </a>
       </div>
 
