--- a/initAndUpdate.html
+++ b/initAndUpdate.html
@@ -106,8 +106,7 @@
             pendo.updateOptions({
                 visitor: {
                     id: visitorId,
-                    random: "visitor random sent in updateOptions",
-                    name: "visitor name sent in updateOptions",
+                    random: "visitor random sent in updateOptions"
                 },
                 account: {
                     id: accountId,
