--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         var v, w, x, y, z;
         o = p[d] = p[d] || {};
         o._q = [];
-        v = ['initialize', 'identify', 'updateOptions', 'pageLoad', 'track'];
+        v = ['initialize', 'identify', 'updateOptions', 'pageLoad', 'track','stopSendingEvents'];
         for (w = 0, x = v.length; w < x; ++w)
           (function (m) {
             o[m] = o[m] || function () {
@@ -36,6 +36,7 @@
 
       // Call this whenever information about your visitors becomes available
       // Please use Strings, Numbers, or Bools for value types.
+      // pendo.stopSendingEvents();
       pendo.initialize({
         //excludeAllText: true,
         //disableGuides: true,
@@ -65,6 +66,7 @@
         },
         annotateUrl: annotateUrl
       });
+      
     })('a93e68a6-46fd-443a-699f-aa31985c066d');
   </script>
 
@@ -187,6 +189,15 @@
             style='padding: 0px 10px; ;border: solid 1px black; height: 40px;vertical-align: middle;'>Back to
             sheBasic2</button>
         </a>
+      </div>
+      <div>
+        <button onclick="stopSending()" class="buttonRainbow" id="stopSending"
+          style='padding: 0px 10px; ;border: solid 1px black; height: 40px;vertical-align: middle;'>stopSending</button>
+        <script type="text/javascript">
+          function stopSending() {
+            pendo.stopSendingEvents();
+          }
+        </script>
       </div>
 
 
